set the zoom only once, prevents infinite loop, fdo#51040

Change-Id: I9d6e077e489e513cc8eb482b22e77c7bc1adffe4